chore: migrate to java 25